--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "mocha --reporter spec --bail"
   },
   "devDependencies": {
-    "mocha": "~1.17.0"
+    "mocha": "^8.1.1"
   },
   "repository": {
     "type": "git",
